# asus-dialpad-driver

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  asus_dialpad_driver.wayland.service  asus_dialpad_driver.x11.service  dialpad.py  flake.nix  install.sh  install_begin_send_anonymous_report.sh  install_config_send_anonymous_report.sh  install_device_check.sh  install_finished_send_anonymous_report.sh  install_layout_auto_suggestion.sh  install_layout_select.sh  install_logs.sh  install_service.sh  install_user_groups.sh  laptop_touchpad_dialpad_layouts.csv  main.py  pyproject.toml  requirements.txt  uninstall_service.sh  uninstall_user_groups.sh  vivodial-service-down  vivodial-service-up
.github/ISSUE_TEMPLATE/: bug-report.yml  layout-request.yml
layouts/: asusvivobook16x.py  proartp16.py
nix/: default.nix  module.nix
