[project]
name = "asus-dialpad-driver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "libevdev>=0.12",
    "numpy>=2.3.1",
    "pyasyncore>=1.0.4",
    "pydbus>=0.6.0",
    "pyinotify>=0.9.6",
    "python-xlib>=0.33",
    "pywayland>=0.4.18",
    "smbus2>=0.5.0",
    "systemd-python>=235",
    "xkbcommon<1.1",
]
